fix: overflow overlay

--- a/momentum/css/style.scss
+++ b/momentum/css/style.scss
@@ -38,7 +38,8 @@ body {
     color: white;
     width: 100%;
     height: 100vh;
-    overflow: scroll;
+    
+    overflow: auto;
 
     .wrapper {
       display: flex;
@@ -117,8 +118,8 @@ h3 {
 
 .bg-btn {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: 2vmin;
+  right: 2vmin;
   width: 40px;
   height: 40px;
   border: 0;
@@ -128,6 +129,7 @@ h3 {
   filter: grayscale(1);
   margin: 10px;
   outline: none;
+  overflow: hidden;
 
   &:hover {
     cursor: pointer;
@@ -153,6 +155,7 @@ h3 {
   max-width: 75vw;
   opacity: 0;
   transition: opacity 250ms, height 500ms;
+  overflow: hidden;
 
   @include max_700() {
     font-size: 0.9rem;
